sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  def temp = 0;
  def i = 0;
  def j = 0;
  for( i <- 0 to getValueCount() -1){
    temp = getValue(i)
    j = i
    while( j > 0 & getValue(j - 1) > x){
      copy(j-1, j)
      j = j - 1
  	}
    setValue(j, temp)
  }
}